# Nmap Changelog ($Id$); -*-text-*-

o Added rpcinfo.nse script, which contacts a listening RPC portmapper
  and reports the listening services and port information (like
  rpcinfo -p does).  The script was written by Sven Klemm.  Fyodor
  then enhanced the RPC number list with all of the entries from
  nmap-rpc.

o Fixed an error that showed itself on Windows when attempting
  to scan localhost as an unprivileged user (nmap --unprivileged
  localhost). The error looked like
   "Skipping SYN Stealth Scan against localhost (127.0.0.1) because
    Windows does not support scanning your own machine (localhost) this
    way."
  Now connect scan is used instead of SYN scan.

o Fixed an output problem that showed itself on Windows when attempting
  to scan localhost, which is skipped. The problem looked like
    All 0 scanned ports on 127.0.0.1 are 
  ("Are what?") Now it looks like
    0 ports scanned on 127.0.0.1
  Rob Nicholls reported the problem.

o Fixed a bug that prevented the --resume option from working on
  Windows. A symptom of the bug was an error message that looks like
  ..\utils.cc(996): CreateFileMapping(), file 'testresume', length 103,
  mflags 000
  00006: The parameter is incorrect.
   (87)
  when running "nmap --resume testresume". Rob Nicholls submitted the
  fix.

o Zenmap uses -PN now instead of -P0. -P0 is still supported but -PN is
  recommended to avoid confusion with the -PO (protocol ping) option.
  jah (jah(a)zadkiel.plus.com) noticed this.

o On Windows, paths beginning with \ are now considered absolute when
  used with the --script option. jah (jah(a)zadkiel.plus.com) suggested
  this.

o Zenmap no longer double-spaces its output (by inadvertently
  duplicating newlines) when viewing scan results that were saved to a
  file. Joao Medeiros submitted the patch.

o Nmap's output options (-oA, -oX, etc.) now support strftime()-like
  conversions in the filename.  %H, %M, %S, %m, %d, %y, and %Y are